--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/student/Downloads/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
+executable_path="C:/Users/Runic/Desktop/Games/Godot Engine/Godot 4.exe"
 use_advanced_connections=false
 show_script_methods_only=true
 show_compatible_methods_only=false
@@ -64,7 +64,7 @@ last_selected_language="C#"
 
 [color_picker]
 
-recent_presets=PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0, 0.0744473, 0.089495, 0.114581, 1, 0, 0.0962742, 0.167, 1, 0.133546, 0.000194039, 0.235015, 1, 0.356528, 0.792371, 0.68293, 1, 0.567133, 0.942415, 0.838634, 1, 0.372133, 0.965409, 0.904274, 1, 0.367544, 1, 0.548063, 1)
+recent_presets=PackedColorArray(1, 0.716667, 0, 1, 0.226707, 0.226707, 0.226707, 1, 0.947586, 0.598361, 0, 1, 0.94902, 0.329412, 0, 1, 1, 0.496329, 0.316932, 1, 1, 0.266667, 0, 1, 1, 0.316667, 0, 1, 0.361627, 0.566118, 1, 1, 0.500528, 0.300957, 0.583913, 1)
 
 [shader_setup]
 
