--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Models/Guns/Shotgun.blend")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Entities/Core/Player.cs")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Trenchbroom/Textures/", "res://Trenchbroom/FGD/", "res://Trenchbroom/Entities/", "res://Textures/Guns/", "res://Textures/Entity/Characters/", "res://Textures/Entity/Characters/Player/", "res://Textures/Entity/Characters/Demons/", "res://Sounds/", "res://Sounds/HL2 Weapons/", "res://Scripts/", "res://Scripts/Weapons/", "res://Scripts/Entities/", "res://Scripts/Entities/Projectiles/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Entities/", "res://Scenes/Entities/Effects/", "res://Scenes/Entities/Core/", "res://Scenes/Entities/Core/Projectiles/", "res://Models/", "res://Models/Guns/", "res://Models/Guns/Materials/", "res://addons/", "res://addons/trailmesh/", "res://addons/trailmesh/example/", "res://addons/trailmesh/bin/", "res://addons/qodot/", "res://addons/qodot/game_definitions/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -31,13 +31,12 @@ open_scenes=PackedStringArray("res://Scenes/Maps/TestMap-01.tscn", "res://Scenes
 center_split_offset=-409
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-current_scene="res://Scenes/Weapons/Shotgun.tscn"
-selected_bottom_panel_item=0
+current_scene="res://Scenes/Entities/Core/Player.tscn"
 
 [ScriptEditor]
 
-open_scripts=[]
-selected_script=""
+open_scripts=["res://addons/qodot/src/nodes/qodot_map.gd"]
+selected_script="res://addons/qodot/src/nodes/qodot_map.gd"
 open_help=[]
 script_split_offset=70
 list_split_offset=0
