--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -4,7 +4,7 @@ dock_1_selected_tab_idx=0
 dock_2_selected_tab_idx=0
 dock_3_selected_tab_idx=0
 dock_4_selected_tab_idx=0
-dock_5_selected_tab_idx=0
+dock_5_selected_tab_idx=1
 dock_6_selected_tab_idx=0
 dock_7_selected_tab_idx=0
 dock_8_selected_tab_idx=0
@@ -20,7 +20,7 @@ dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
 dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Entities/Core/Player.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Trenchbroom/Textures/", "res://Trenchbroom/FGD/", "res://Trenchbroom/Entities/", "res://Textures/Guns/", "res://Textures/Entity/Characters/", "res://Textures/Entity/Characters/Player/", "res://Textures/Entity/Characters/Demons/", "res://Sounds/", "res://Sounds/HL2 Weapons/", "res://Scripts/", "res://Scripts/Weapons/", "res://Scripts/Entities/", "res://Scripts/Entities/Projectiles/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Entities/", "res://Scenes/Entities/Effects/", "res://Scenes/Entities/Core/", "res://Scenes/Entities/Core/Projectiles/", "res://Models/", "res://Models/Guns/", "res://Models/Guns/Materials/", "res://addons/", "res://addons/trailmesh/", "res://addons/trailmesh/example/", "res://addons/trailmesh/bin/", "res://addons/qodot/", "res://addons/qodot/game_definitions/")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Trenchbroom/", "res://Trenchbroom/Textures/", "res://Trenchbroom/FGD/", "res://Trenchbroom/Entities/", "res://Textures/Guns/", "res://Textures/Entity/Characters/", "res://Textures/Entity/Characters/Player/", "res://Textures/Entity/Characters/Demons/", "res://Scripts/", "res://Scripts/Weapons/", "res://Scripts/Entities/", "res://Scripts/Entities/Projectiles/", "res://Scripts/Entities/Core/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Entities/", "res://Scenes/Entities/Effects/", "res://Scenes/Entities/Core/", "res://Scenes/Entities/Core/Projectiles/", "res://Models/", "res://Models/Guns/", "res://Models/Guns/Materials/", "res://addons/", "res://addons/trailmesh/", "res://addons/trailmesh/example/", "res://addons/trailmesh/bin/", "res://addons/qodot/", "res://addons/qodot/game_definitions/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -31,12 +31,13 @@ open_scenes=PackedStringArray("res://Scenes/Maps/TestMap-01.tscn", "res://Scenes
 center_split_offset=-409
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
-current_scene="res://Scenes/Entities/Core/Player.tscn"
+current_scene="res://Scenes/Maps/TestMap-01.tscn"
+selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://addons/qodot/src/nodes/qodot_map.gd"]
-selected_script="res://addons/qodot/src/nodes/qodot_map.gd"
+open_scripts=[]
+selected_script=""
 open_help=[]
 script_split_offset=70
 list_split_offset=0
