--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,7 +19,7 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Models/Characters/Materials/Prophets/mat_infernusBelt.tres")
+dock_filesystem_selected_paths=PackedStringArray("res://Textures/Particles/tex_dust.png")
 dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Trenchbroom/", "res://Trenchbroom/Textures/", "res://Trenchbroom/FGD/", "res://Trenchbroom/Entities/", "res://Textures/", "res://Textures/Particles/", "res://Textures/Guns/", "res://Textures/Entity/", "res://Textures/Entity/Utility/", "res://Textures/Entity/Characters/", "res://Textures/Entity/Characters/Prophets/", "res://Textures/Entity/Characters/Player/", "res://Textures/Entity/Characters/Demons/", "res://Scripts/", "res://Scripts/Weapons/", "res://Scripts/Entities/", "res://Scripts/Entities/Projectiles/", "res://Scripts/Entities/Core/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Entities/", "res://Scenes/Entities/Effects/", "res://Scenes/Entities/Core/", "res://Scenes/Entities/Core/Projectiles/", "res://Models/", "res://Models/Guns/Materials/", "res://Models/Characters/", "res://Models/Characters/Materials/", "res://Models/Characters/Materials/Prophets/", "res://Models/Characters/Materials/Demons/", "res://addons/", "res://addons/trailmesh/", "res://addons/trailmesh/example/", "res://addons/trailmesh/bin/", "res://addons/qodot/", "res://addons/qodot/game_definitions/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
