--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,18 +19,18 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Scripts/Utility/HealthBar.cs")
-dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Trenchbroom/Textures/", "res://Trenchbroom/FGD/", "res://Trenchbroom/Entities/", "res://Textures/", "res://Textures/Utility/", "res://Textures/UI/", "res://Sounds/Music/", "res://Scripts/", "res://Scenes/Utility/", "res://Scenes/Entities/", "res://Scenes/Entities/Heretics/", "res://Scenes/Entities/Effects/", "res://Scenes/Entities/Effects/Gibs/", "res://Models/Entities/", "res://Models/Entities/Heretics/", "res://Fonts/", "res://addons/", "res://addons/trailmesh/example/", "res://addons/trailmesh/bin/", "res://addons/qodot/", "res://addons/qodot/game_definitions/")
+dock_filesystem_selected_paths=PackedStringArray("res://Textures/Particles/tex_dust.png")
+dock_filesystem_uncollapsed_paths=PackedStringArray("res://", "res://Trenchbroom/Textures/", "res://Trenchbroom/FGD/", "res://Trenchbroom/Entities/", "res://Textures/", "res://Textures/Particles/", "res://Sounds/HL2 Weapons/", "res://Scripts/Utility/", "res://Scenes/", "res://Scenes/Weapons/", "res://Scenes/Entities/Heretics/", "res://Scenes/Entities/Effects/", "res://Scenes/Entities/Effects/Gibs/", "res://Models/Materials/", "res://Models/Materials/Guns/", "res://Models/Guns/", "res://Models/Entities/", "res://addons/", "res://addons/trailmesh/example/", "res://addons/trailmesh/bin/", "res://addons/qodot/", "res://addons/qodot/game_definitions/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Scenes/Maps/map_test_01.tscn", "res://Scenes/Entities/ent_player.tscn", "res://Scenes/Weapons/wpn_shotgun.tscn", "res://Scenes/Entities/Heretics/ent_trainingDummy.tscn", "res://Scenes/Utility/scn_healthBar.tscn")
+open_scenes=PackedStringArray("res://Scenes/Maps/map_test_01.tscn", "res://Scenes/Entities/ent_player.tscn", "res://Scenes/Weapons/wpn_shotgun.tscn", "res://Scenes/Entities/Heretics/ent_trainingDummy.tscn", "res://Scenes/Utility/scn_healthBar.tscn", "res://Scenes/Weapons/wpn_revolver.tscn")
 center_split_offset=-409
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=0
+selected_main_editor_idx=1
 current_scene="res://Scenes/Entities/ent_player.tscn"
 selected_bottom_panel_item=0
 
