--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="C:/Users/student/Downloads/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64/Godot_v4.2.1-stable_mono_win64.exe"
+executable_path="C:/Users/Runic/Desktop/Games/Godot Engine/Godot 4.exe"
 use_advanced_connections=false
 show_script_methods_only=true
 show_compatible_methods_only=false
@@ -70,7 +70,7 @@ last_selected_language="C#"
 
 [color_picker]
 
-recent_presets=PackedColorArray(0.78, 0, 0.247, 1, 0.878432, 0, 0.26726, 1, 0.517184, 0.517184, 0.517184, 1, 0.522029, 0.507095, 0.5699, 1, 1, 0.834403, 0.689622, 1, 0.866822, 0.867249, 0.886712, 1, 0.44975, 0.450303, 0.494469, 1, 1, 1, 1, 1, 1, 1, 1, 0)
+recent_presets=PackedColorArray(0.38, 0.5985, 0.95, 1, 0.684, 0.785967, 0.95, 1, 0.72, 0.827333, 1, 1, 0.885538, 0.929191, 0.999999, 1, 0.145898, 0.424072, 0.268259, 1, 4.15391e-06, 0.00679231, 0.0255008, 1, 0.00105868, 0.374631, 0.690519, 1, 0.11636, 0.189789, 1, 1, 0.279027, 0.45475, 1, 1)
 
 [shader_setup]
 
